--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,15 @@ android {
         exclude 'META-INF/services/com.fasterxml.jackson.core.JsonFactory'
         exclude 'META-INF/proguard/androidx-annotations.pro'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation 'androidx.vectordrawable:vectordrawable:1.0.0-beta01'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
         transitive = true
     }
@@ -56,37 +60,27 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.6.1'
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-config:16.5.0'
-
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation('com.github.fcopardo:easyrest:v1.4.2@aar') {
         transitive = true
     }
-
     // Volley
     implementation 'com.android.volley:volley:1.1.1'
-
     //  Graph View
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
-
     // Single Toggle Button
     implementation 'com.nex3z:toggle-button-group:1.1.8'
-
     // Material Dialog
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
-
     // Floating Search View
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
-
     // Room components
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
     annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
     androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
-
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.archLifecycleVersion"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$rootProject.archLifecycleVersion"
-
-
     testImplementation 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
